[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Todot/Src/List/List.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Src/Title/Title.tscn" type="PackedScene" id=2]

[node name="List" type="PanelContainer" groups=["List"]]
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 0 )
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 287.0
margin_bottom = 102.0
custom_constants/separation = 5

[node name="ListTitle" parent="VBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
focus_mode = 0
custom_constants/hseparation = 0
enabled_focus_mode = 0
drag_item = NodePath("../..")
menu = true
drag_x = true
drag_y = true

[node name="CardScroll" type="ScrollContainer" parent="VBox"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 280.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="CardContainer" type="VBoxContainer" parent="VBox/CardScroll"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 5

[node name="AddButton" type="Button" parent="VBox"]
unique_name_in_owner = true
margin_top = 65.0
margin_right = 280.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 30 )
text = "+ Add Card"

[node name="AddCardBox" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
visible = false
margin_top = 100.0
margin_right = 280.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 30 )

[node name="AddCardEdit" type="LineEdit" parent="VBox/AddCardBox"]
unique_name_in_owner = true
margin_right = 239.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Enter a title for this card"

[node name="AddCardButton" type="Button" parent="VBox/AddCardBox"]
margin_left = 243.0
margin_right = 280.0
margin_bottom = 30.0
text = "Add"

[connection signal="menu_pressed" from="VBox/ListTitle" to="." method="_menu_pressed"]
[connection signal="minimum_size_changed" from="VBox/CardScroll/CardContainer" to="." method="fix_size"]
[connection signal="pressed" from="VBox/AddButton" to="VBox/AddButton" method="hide"]
[connection signal="pressed" from="VBox/AddButton" to="VBox/AddCardBox" method="show"]
[connection signal="pressed" from="VBox/AddButton" to="VBox/AddCardBox/AddCardEdit" method="grab_focus"]
[connection signal="pressed" from="VBox/AddButton" to="VBox/AddCardBox/AddCardEdit" method="set_text" binds= [ "" ]]
[connection signal="text_entered" from="VBox/AddCardBox/AddCardEdit" to="." method="add_card_button_pressed"]
[connection signal="pressed" from="VBox/AddCardBox/AddCardButton" to="." method="add_card_button_pressed"]
